# so_arm_playground

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flake.nix  main.py  pyproject.toml  result
.claude/: CLAUDE.md  settings.json
SoArmVR/: .gitattributes  .gitignore  README.md
SoArmVR/Assets/Msgs/teleop_ik/msg/: ResetCommand.msg
SoArmVR/Assets/Settings/Build Profiles/: Meta Quest 3.asset
SoArmVR/Assets/Settings/Project Configuration/: UniversalRenderPipelineGlobalSettings.asset
SoArmVR/Assets/XR/Settings/: OpenXRPackageSettings.asset
SoArmVR/Assets/_SoArmVR/Input/: SoArmTeleoperation.inputactions
SoArmVR/Assets/_SoArmVR/Msgs/teleop_ik/msg/: TargetPoseWithInput.msg
SoArmVR/Assets/_SoArmVR/Prefabs/: Anchor.prefab  Teleoperation.prefab  VirtualSoArm.prefab  XR Origin Hands (XR Rig).prefab
SoArmVR/Assets/_SoArmVR/Scenes/: XRTeleoperation.unity
SoArmVR/Assets/_SoArmVR/Scripts/: _SoArmVR.asmdef
SoArmVR/Assets/_SoArmVR/Scripts/GeneratedMsgs/BuiltinInterfaces/: Duration.cs  Time.cs
SoArmVR/Assets/_SoArmVR/Scripts/GeneratedMsgs/Geometry/: Point.cs  Pose.cs  PoseStamped.cs  Quaternion.cs  (+1 more)
SoArmVR/Assets/_SoArmVR/Scripts/Kinematics/: Kinematics.asmdef  UrdfModel.cs  UrdfStlParser.cs
SoArmVR/Assets/_SoArmVR/Scripts/Teleoperation/: ArmPlacementController.cs  ArmTeleoperationController.cs  DebugTeleoperationSink.cs  ITeleoperationSink.cs  LocalNetwork.cs  RosTeleoperationSink.cs  TeleoperationAnchor.cs  TeleoperationSample.cs  TeleoperationSession.cs  VirtualSoArm.cs  VrTrajectorySink.cs  WorldAlignedAnchor.cs
SoArmVR/Assets/_SoArmVR/Urdf/: so101.urdf.txt
SoArmVR/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset
SoArmVR/nix/: dotnet-shell.nix  uloop.nix
VRTeleop/: .gitignore  README.md  flake.nix  project.godot  pyproject.toml
VRTeleop/config/: default.json
VRTeleop/docs/: SPEC.md
VRTeleop/scenes/: main.tscn
VRTeleop/scripts/: main.gd  robot_preview.gd  xr_controller_pose_sender.gd
VRTeleop/sim/: so101_minimal.xml
VRTeleop/tests/: test_ik.py
VRTeleop/vrteleop_bridge/: __init__.py  backends.py  cli.py  config.py  coordinates.py  ik.py  pose_receiver.py  types.py
docs/: rosettadds-feature-gaps.md
docs/superpowers/plans/: 2026-06-13-soarmvr-rosettadds-migration.md  2026-06-13-vr-teleop-safety.md  2026-06-21-soarmvr-anchor-projection-stick-wrist.md  2026-06-23-teleop-ik-cpp-rewrite.md  2026-06-23-teleop-ik-joint5-fk.md  2026-07-01-ik-mode-toggle.md  2026-07-01-vr-reset-command.md  2026-07-07-soarmvr-vr-ik-visualization.md  2026-07-07-vr-teleop-rviz-fake.md  2026-07-08-lerobot-sync-directory.md  2026-07-19-lerobot-cuda-training.md
docs/superpowers/specs/: 2026-06-13-soarmvr-rosettadds-migration-design.md  2026-06-13-vr-teleop-safety-design.md  2026-06-21-soarmvr-anchor-projection-stick-wrist-design.md  2026-06-23-teleop-ik-cpp-rewrite-design.md  2026-06-23-teleop-ik-joint5-fk-design.md  2026-07-01-vr-reset-command-design.md  2026-07-07-soarmvr-vr-ik-visualization-design.md  2026-07-07-vr-teleop-rviz-fake-design.md  2026-07-08-lerobot-sync-directory-design.md  2026-07-19-lerobot-cuda-training-design.md
include/feetech_ros2_driver/: feetech_ros2_driver.hpp
lerobot/: .envrc  .gitignore  README.md  pyproject.toml
ros2_ws/: .envrc  .gitignore  README.md
ros2_ws/nix/: feetech-ros2-driver.nix  lerobot-controller.nix  lerobot-description.nix  lerobot-moveit.nix  libserial.nix  overlay.nix  shell.nix  zenoh-bridge-ros2dds.nix
ros2_ws/podman/: Containerfile  run.sh  serial-bridge.sh  setup.sh
ros2_ws/robostack/: environment.yaml  setup.sh
ros2_ws/src/feetech_ros2_driver/: package.xml
ros2_ws/src/feetech_ros2_driver/feetech_driver/: CMakeLists.txt
ros2_ws/src/feetech_ros2_driver/feetech_driver/src/: serial_port.cpp
ros2_ws/src/feetech_ros2_driver/src/: feetech_calibration_node.cpp  feetech_ros2_driver.cpp
ros2_ws/src/lerobot_controller/: package.xml
ros2_ws/src/lerobot_controller/config/: follower_calib.json  kaguyaccho.json  so101_follower_controllers.yaml
ros2_ws/src/lerobot_controller/include/lerobot_controller/: joint_state_to_trajectory.hpp
ros2_ws/src/lerobot_controller/launch/: so101_follower_controller.launch.py  so101_leader_follower.launch.py
ros2_ws/src/lerobot_controller/scripts/: joint_state_to_trajectory.py
ros2_ws/src/lerobot_controller/src/: joint_state_to_trajectory.cpp
ros2_ws/src/lerobot_description/: package.xml
ros2_ws/src/lerobot_description/rviz/: vr_teleop_rviz.rviz
ros2_ws/src/lerobot_description/urdf/: so101_hw.urdf.xacro  so101_mock.urdf.xacro  so101_ros2_control_mock.xacro
ros2_ws/src/lerobot_moveit/: package.xml
ros2_ws/src/lerobot_moveit/launch/: so101_moveit.launch.py
ros2_ws/src/teleop_ik/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/teleop_ik/config/: gamepad_params.yaml  teleop_ik_params.yaml
ros2_ws/src/teleop_ik/include/teleop_ik/: coordinate_utils.hpp  gamepad_node.hpp  ik_node.hpp  visibility_control.hpp
ros2_ws/src/teleop_ik/launch/: gamepad_teleop.launch.py  teleop_ik.launch.py  vr_teleop.launch.py  vr_teleop_bridge.launch.py  vr_teleop_bridge_rviz.launch.py  vr_teleop_rviz.launch.py
ros2_ws/src/teleop_ik/msg/: TargetPoseWithInput.msg
ros2_ws/src/teleop_ik/src/: coordinate_utils.cpp  gamepad_node.cpp  gamepad_node_main.cpp  ik_node.cpp  ik_node_main.cpp
ros2_ws/src/teleop_ik/teleop_ik/: coordinate_utils.py  gamepad_node.py  ik_node.py
ros2_ws/src/teleop_ik/test/: so101.urdf  test_coordinate_utils.cpp  test_coordinate_utils.py  test_gamepad_node.cpp  test_ik_node.py  test_ik_node_helpers.cpp  test_packaging.cpp  test_packaging.py  test_qos.cpp  test_qos.py  test_reset_msg.cpp  test_target_msg.cpp  test_target_msg.py  test_vr_teleop_launch.py  test_vr_teleop_rviz_launch.py
src/lerobot_controller/: CMakeLists.txt
src/lerobot_controller/config/: leader_calib.json  so101_leader_controllers.yaml
src/lerobot_controller/launch/: so101_leader.launch.py
src/lerobot_description/urdf/: so101_gazebo.xacro  so101_hw_leader.urdf.xacro  so101_ros2_control_feetech.xacro  so101_ros2_control_feetech_leader.xacro
(+6 files in other folders)
