[project]
name = "so-arm-lerobot"
version = "0.1.0"
description = "LeRobot CLI environment for SO-101 leader/follower sync and ACT"
requires-python = ">=3.12"
dependencies = [
    "lerobot[core_scripts,training,feetech]",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
